Add Python playground to all the navigation bars

--- a/LearningResource/templates/ConceptModulesPage.html
+++ b/LearningResource/templates/ConceptModulesPage.html
@@ -37,7 +37,7 @@
             <a class="learning-modules">
               <b class="learning-modules1">Challenges</b>
             </a>
-            <a class="learning-modules">
+            <a class="learning-modules" href="{% url 'playground' %}">
               <b class="learning-modules1">Python Playground</b>
             </a>
           </div>
