--- a/LearningResource/templates/Submodules.html
+++ b/LearningResource/templates/Submodules.html
@@ -37,7 +37,7 @@
             <a class="learning-modules2">
               <b class="learning-modules3">Challenges</b>
             </a>
-            <a class="learning-modules2">
+            <a class="learning-modules2" href="{% url 'playground' %}">
               <b class="learning-modules3">Python Playground</b>
             </a>
           </div>
