--- a/WelcomePage/templates/MenuPage.html
+++ b/WelcomePage/templates/MenuPage.html
@@ -37,7 +37,7 @@
             <a class="learning-modules6">
               <b class="learning-modules7">Challenges</b>
             </a>
-            <a class="learning-modules6">
+            <a class="learning-modules6" href="{% url 'playground' %}">
               <b class="learning-modules7">Python Playground</b>
             </a>
           </div>
