added redirection to quizzes and python playground page

--- a/WelcomePage/templates/MenuPage.html
+++ b/WelcomePage/templates/MenuPage.html
@@ -31,7 +31,7 @@
             <a class="learning-modules6" href="{% url 'learning_modules' %}">
               <b class="learning-modules7">Learning Modules</b>
             </a>
-            <a class="learning-modules6">
+            <a class="learning-modules6" href="/quiz/1/">
               <b class="learning-modules7">Quizzes</b>
             </a>
             <a class="learning-modules6">
@@ -85,7 +85,7 @@
                 <img class="modulelearning-11" src="{% static 'public/modulelearning-11@3x.png' %}" alt="Thumbnail">
             </a>
             <div class="learning-modules-parent">
-              <a class="learning-modules9">Quizzes</a>
+              <a class="learning-modules9" href="/quiz/1/">Quizzes</a>
               <b class="this-is-where"
                 >This is where the tutorials and guides on Python can be
                 accessed. It will teach the user step by step on how to learn
@@ -116,7 +116,7 @@
                 <img class="modulelearning-13" src="{% static 'public/modulelearning-13@3x.png' %}" alt="Thumbnail">
             </a>
             <div class="learning-modules-parent">
-              <a class="learning-modules9">Python Playground</a>
+              <a class="learning-modules9" href="{% url 'playground' %}">Python Playground</a>
               <b class="this-is-where">
                 <p class="if-the-user">
                   If the user selects this option, the program will bring them
