--- a/WelcomePage/templates/base_generic.html
+++ b/WelcomePage/templates/base_generic.html
@@ -29,7 +29,7 @@
                         {% block buttons %}
                         <a href="{% url 'learning_modules' %}"><button class="btn btn-outline-primary mx-1">Learning Modules</button></a>
                         <a href="{% url 'home' %}"><button class="btn btn-outline-primary mx-1">Progress Tracker</button></a>
-                        <a href="{% url 'challenges_quizzes' %}"><button class="btn btn-outline-primary mx-1">Challenges and Quizzes</button></a>
+                        <a href="{% url 'home' %}"><button class="btn btn-outline-primary mx-1">Challenges and Quizzes</button></a>
                         <a href="{% url 'home' %}"><button class="btn btn-outline-primary mx-1">Python Playground</button></a>
                         <a href="{% url 'home' %}"><button class="btn btn-outline-primary mx-1">Settings</button></a>
                         <a href="{% url 'home' %}"><button class="btn btn-outline-primary mx-1">Feedback</button></a>
