--- a/LearningResource/static/css/Submodules.css
+++ b/LearningResource/static/css/Submodules.css
@@ -134,15 +134,8 @@
   justify-content: space-between;
   padding: 13px var(--padding-11xl);
 }
-.image-14 {
-  align-self: stretch;
-  background-image: url(./public/image14@2x.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top;
-}
-.description1,
-.image-14 {
+.description1 {
+  font-size: 26px;
   flex: 1;
   position: relative;
 }
@@ -155,11 +148,17 @@
 }
 .description-wrapper {
   background-color: var(--color-gainsboro-100);
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 14px 41px;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30px 41px;
   font-size: var(--font-size-xl);
   color: var(--color-black);
+  align-items: flex-start;
+}
+.description-text {
+  flex: 1;
+  padding-top: 10px;
+  padding-left: 10px;
 }
 .frame-parent8 {
   background-color: var(--color-oldlace);
